
Camlp5 Version 8.00-alpha02:
--------------------

* [15 Aug 2020] fixed "-verbose" bug in mkcamlp5 (and updated doc)


* [13 Aug 2020] rehabilitated q_ast parsing kit and verified that it
  works just as q_MLast does (for revised syntax).  Still haven't done
  so original syntax (and it won't, since original syntax has
  ambiguities when introducing antiquotations everywhere).

  Also rehabbed the "test" tests, but not all of them work
  (e.g. "quot_o").

  Changed revised syntax (only revised -- original syntax remains the
  same) of GADT declarations to allow them to be pattern-matched with
  quotations.  Example: instead of

  type t = A : t1 -> t2 -> t

  use

  type t = A of t1 and t2 : t
  
  This allows quotations like

  type t = [ A of $list:args$ : $t$ ] ;

* [05 Aug 2020] Fixed top/rprint so that in revised syntax toplevel
  mode, exceptions get printed out correctly.

  TODO: Devise a unit-test for this, and go thru and verify that it
  works for all "outcometree" types.

* [01 Aug 2020] Added purely-internal "ppxprint" (PPX-derived printers
  for AST types) so we can use it to debug.  It's disabled by default,
  so no external users should need to worry about it.

  To enable, build camlp5 with "BOOTSTRAPPED=1" as an extra toplevel
  make argument.

  TODO: add this to the "configure" script.

* [30 Jul 2020] fixed parser lookahead-too-far bug in revised syntax.
  Input {|(F.f 1);|} was causing lookahead to the token after the
  semicolon.

* [25 Jul 2020] add "extfold" to META.  Move much documentation from
  README.md to Sphinx/RST docs.  Add example of extending Ocaml syntax
  to tutorial.

* [24 Jul 2020] update META to allow use of all syntax-extension kits
  with original syntax.  Some of these will be breaking; we'll undo
  them as we find that they break (assuming nothing can be done to fix
  the breakage).

Camlp5 Version 8.00-alpha01:
--------------------

* [07 Jul 2020] Massive number of changes to support PPX